--- a/index.html
+++ b/index.html
@@ -1,35 +1,175 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Import Question</title>
-    <link rel="stylesheet" href="./public/css/style.css" />
-  </head>
-  <body>
-    <div class="container">
-      <div class="banner-gif">
-        <img id="banner" src="./public/images/mid.gif" alt="banner" />
-      </div>
-      <h1 id="question-heading">Will you be my valentine?</h1>
-      <div class="buttons">
-        <button id="yes-button"><p>Yes</p></button>
-        <button id="no-button"><p>No</p></button>
-      </div>
-      <div class="message">
-        <h2 id="success-message">Yepppie, see you sooonnn :3</h2>
-        
-        <h6>Creator: <a class="creator" href="https://github.com/Aayush-683">Aayush683 ;)</a></h6>
-      </div>
-      <div class="language-selector">
-        <label for="language-select">Choose Language:</label>
-        <select id="language-select" onchange="changeLanguage()">
-          <option value="english">English</option>
-          <option value="french">French</option>
-          <option value="thai">แบบไทย</option>
-        </select>
-      </div>
-    </div>
-    <script src="./public/js/script.js"></script>
-  </body>
+<head>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Will You Be My Valentine?</title>
+
+<style>
+body {
+margin: 0;
+height: 100vh;
+font-family: 'Segoe UI', system-ui, -apple-system, sans-serif;
+background: linear-gradient(135deg, #ffd6e8, #fff1f7);
+display: flex;
+align-items: center;
+justify-content: center;
+overflow: hidden;
+}
+
+.card {
+background: white;
+padding: 24px;
+border-radius: 24px;
+box-shadow: 0 20px 40px rgba(0,0,0,0.15);
+max-width: 420px;
+width: 90%;
+text-align: center;
+position: relative;
+}
+
+h1 {
+font-size: 28px;
+margin-bottom: 12px;
+}
+
+.media {
+margin: 16px 0 20px;
+height: 320px;
+border-radius: 20px;
+overflow: hidden;
+box-shadow: 0 12px 30px rgba(255, 105, 180, 0.35);
+animation: float 3s ease-in-out infinite;
+}
+
+.media img {
+width: 100%;
+height: 100%;
+object-fit: cover;
+}
+
+@keyframes float {
+0%, 100% { transform: translateY(0); }
+50% { transform: translateY(-10px); }
+}
+
+.buttons {
+display: flex;
+justify-content: center;
+gap: 16px;
+margin-top: 12px;
+position: relative;
+}
+
+button {
+padding: 14px 20px;
+border: none;
+border-radius: 999px;
+font-size: 16px;
+font-weight: 600;
+cursor: pointer;
+transition: transform 0.15s ease;
+}
+
+#yes {
+background: #ff4d8d;
+color: white;
+box-shadow: 0 10px 20px rgba(255, 77, 141, 0.4);
+}
+
+#no {
+background: #f3f3f3;
+color: #333;
+position: absolute;
+}
+
+#yes:active {
+transform: scale(0.97);
+}
+
+.modal {
+position: fixed;
+inset: 0;
+background: rgba(0,0,0,0.35);
+display: none;
+align-items: center;
+justify-content: center;
+z-index: 10;
+}
+
+.modal-content {
+background: white;
+padding: 28px;
+border-radius: 24px;
+text-align: center;
+max-width: 360px;
+width: 90%;
+animation: pop 0.4s ease;
+}
+
+@keyframes pop {
+from { transform: scale(0.8); opacity: 0; }
+to { transform: scale(1); opacity: 1; }
+}
+
+.modal-content h2 {
+margin-top: 0;
+font-size: 26px;
+}
+</style>
+</head>
+
+<body>
+
+<div class="card">
+<h1>Will you be my Valentine? 💖</h1>
+
+<div class="media">
+<img src="valentine.jpg" alt="Us together" />
+</div>
+
+<div class="buttons">
+<button id="yes">Yes 💕</button>
+<button id="no">No 🙈</button>
+</div>
+</div>
+
+<div class="modal" id="modal">
+<div class="modal-content">
+<h2>YAY!!! 🥹💞</h2>
+<p>You just made my day 💐</p>
+</div>
+</div>
+
+<script>
+const yesBtn = document.getElementById("yes");
+const noBtn = document.getElementById("no");
+const modal = document.getElementById("modal");
+
+let scale = 1;
+
+function moveNoButton() {
+scale += 0.15;
+yesBtn.style.transform = `scale(${scale})`;
+
+const x = Math.random() * (window.innerWidth - noBtn.offsetWidth);
+const y = Math.random() * (window.innerHeight - noBtn.offsetHeight);
+
+noBtn.style.left = `${x}px`;
+noBtn.style.top = `${y}px`;
+}
+
+noBtn.addEventListener("mouseenter", moveNoButton);
+noBtn.addEventListener("click", moveNoButton);
+
+yesBtn.addEventListener("click", () => {
+modal.style.display = "flex";
+});
+
+modal.addEventListener("click", () => {
+modal.style.display = "none";
+});
+</script>
+
+</body>
 </html>
